--- a/app/src/main/res/layout/item_perfil_deporte.xml
+++ b/app/src/main/res/layout/item_perfil_deporte.xml
@@ -7,8 +7,8 @@
         android:layout_width="25dp"
         android:layout_height="25dp" />
     <ImageView
+        android:background="#A0A0A0"
         android:scaleType="centerCrop"
-        android:src="@drawable/nadar"
         android:layout_width="match_parent"
         android:layout_height="140dp" />
     <LinearLayout
@@ -18,6 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
+            android:id="@+id/item_deporte_texto_principal"
             android:fontFamily="sans-serif-light"
             android:gravity="center"
             android:layout_gravity="center"
@@ -27,6 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            android:id="@+id/item_deporte_texto_secundario"
             android:fontFamily="sans-serif-light"
             android:layout_gravity="center"
             android:gravity="center"
