--- a/app/src/main/res/layout/fragment_perfil_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil_perfil.xml
@@ -15,6 +15,7 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="230dp">
+
                     <ImageView
                         android:scaleType="centerCrop"
                         android:id="@+id/perfil_imagen_miembro"
@@ -51,6 +52,21 @@
                         android:id="@+id/perfil_edad_miembro"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content" />
+                    <RelativeLayout
+                        android:id="@+id/perfil_click_actualizar_perfil"
+                        android:layout_alignParentRight="true"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp">
+                        <ImageView
+                            android:alpha=".87"
+                            android:layout_centerVertical="true"
+                            android:layout_centerHorizontal="true"
+                            android:layout_marginTop="15dp"
+                            android:layout_marginRight="15dp"
+                            android:id="@+id/perfil_actualizar_perfil"
+                            android:layout_width="35dp"
+                            android:layout_height="35dp" />
+                    </RelativeLayout>
                 </RelativeLayout>
                 <TextView
                     android:fontFamily="sans-serif"
@@ -156,6 +172,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content">
                         <TextView
+                            android:id="@+id/medallas_cantidad_prometeo"
                             android:textColor="#000000"
                             android:textSize="13sp"
                             android:layout_gravity="center"
@@ -171,7 +188,7 @@
                             android:layout_marginTop="10dp"
                             android:layout_gravity="center"
                             android:gravity="center"
-                            android:text="1"
+                            android:text="0"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                     </LinearLayout>
@@ -189,6 +206,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                         <TextView
+                            android:id="@+id/medallas_cantidad_antorcha"
                             android:fontFamily="sans-serif-light"
                             android:alpha=".8"
                             android:textColor="#000000"
@@ -196,7 +214,7 @@
                             android:layout_marginTop="10dp"
                             android:layout_gravity="center"
                             android:gravity="center"
-                            android:text="1"
+                            android:text="0"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                     </LinearLayout>
@@ -214,6 +232,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                         <TextView
+                            android:id="@+id/medallas_cantidad_fuego"
                             android:fontFamily="sans-serif-light"
                             android:alpha=".8"
                             android:textColor="#000000"
@@ -221,7 +240,7 @@
                             android:layout_marginTop="10dp"
                             android:layout_gravity="center"
                             android:gravity="center"
-                            android:text="1"
+                            android:text="0"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                     </LinearLayout>
@@ -239,6 +258,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                         <TextView
+                            android:id="@+id/medallas_cantidad_flama"
                             android:fontFamily="sans-serif-light"
                             android:alpha=".8"
                             android:textColor="#000000"
@@ -246,7 +266,7 @@
                             android:layout_marginTop="10dp"
                             android:layout_gravity="center"
                             android:gravity="center"
-                            android:text="1"
+                            android:text="0"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                     </LinearLayout>
@@ -264,6 +284,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                         <TextView
+                            android:id="@+id/medallas_cantidad_chispa"
                             android:fontFamily="sans-serif-light"
                             android:alpha=".8"
                             android:textColor="#000000"
@@ -271,7 +292,7 @@
                             android:layout_marginTop="10dp"
                             android:layout_gravity="center"
                             android:gravity="center"
-                            android:text="1"
+                            android:text="0"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                     </LinearLayout>
