--- a/app/src/main/res/layout/item_seleccionar_deporte.xml
+++ b/app/src/main/res/layout/item_seleccionar_deporte.xml
@@ -9,10 +9,11 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
     <TextView
-        android:paddingTop="20dp"
-        android:gravity="center_vertical"
+        android:layout_marginBottom="18dp"
+        android:layout_marginTop="18dp"
+        android:gravity="center"
         android:layout_marginLeft="35dp"
-        android:layout_gravity="center_vertical"
+        android:layout_gravity="center"
         android:alpha=".87"
         android:textColor="#000000"
         android:fontFamily="sans-serif-light"
