--- a/app/src/main/res/layout/filtro_busqueda_espacio.xml
+++ b/app/src/main/res/layout/filtro_busqueda_espacio.xml
@@ -30,14 +30,13 @@
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
         android:textColor="#000000"
-        android:text="Actividades deportivas"
+        android:text="Sólo actividades de mi preferencia"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-    <Spinner
-        android:layout_marginTop="15dp"
+    <Switch
         android:layout_gravity="center"
-        android:layout_width="100dp"
-        android:layout_height="45dp"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <TextView
         android:alpha=".8"
         android:textSize="18sp"
