--- a/app/src/main/res/layout/fragment_inicio_4.xml
+++ b/app/src/main/res/layout/fragment_inicio_4.xml
@@ -13,6 +13,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp" />
         <ImageView
+            android:src="@drawable/imagen_presentacion_4"
             android:scaleType="centerCrop"
             android:layout_width="match_parent"
             android:layout_height="400dp" />
