--- a/app/src/main/res/layout/item_actividades_card_espacio.xml
+++ b/app/src/main/res/layout/item_actividades_card_espacio.xml
@@ -44,6 +44,8 @@
                     android:layout_width="25dp"
                     android:layout_height="25dp" />-->
                 <LinearLayout
+                    android:id="@+id/item_espacio_mostrar_espacio"
+                    android:layout_marginBottom="30dp"
                     android:orientation="vertical"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
