Se corrigen varios detalles, se agrega la busqueda de espacio deportivo, se arregla la parte de eventos y se cargan las imagenes de los espacios. Se pueden guardar espacios en la cuenta y se termina la parte de medallas (Correción de errores)

--- a/app/src/main/res/layout/item_actividades_card_espacio.xml
+++ b/app/src/main/res/layout/item_actividades_card_espacio.xml
@@ -23,9 +23,8 @@
                     android:layout_marginBottom="7dp"
                     android:layout_marginTop="7dp"
                     android:layout_marginLeft="7dp"
-                    android:alpha=".2"
-                    android:background="#000000"
-                    android:id="@+id/item_actividades_card_espacio"
+                    android:src="@drawable/default_espacio"
+                    android:id="@+id/item_actividades_card_espacio_imagen"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
             </LinearLayout>
