--- a/app/src/main/res/layout/item_actividades_card_espacio.xml
+++ b/app/src/main/res/layout/item_actividades_card_espacio.xml
@@ -75,6 +75,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                     <TextView
+                        android:id="@+id/item_espacio_calificar"
                         android:textStyle="bold"
                         android:textSize="13sp"
                         android:textColor="@color/wallet_holo_blue_light"
