Se corrigen las actividades en los detalles de un espacio deportivo, se corrigen los servicios. Se cambian los marker, se comienza con las pruebas de la nueva libería para descargar la imagen

--- a/app/src/main/res/layout/drawer.xml
+++ b/app/src/main/res/layout/drawer.xml
@@ -250,7 +250,7 @@
                 android:layout_marginLeft="30dp"
                 android:layout_gravity="center_vertical"
                 android:textSize="14sp"
-                android:text="Ayudanos a mejorar"
+                android:text="Ayúdanos a mejorar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
