--- a/app/src/main/res/layout/dialogo_valoracion.xml
+++ b/app/src/main/res/layout/dialogo_valoracion.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RatingBar
+        android:id="@+id/dialogo_valoracion_rating"
         android:layout_gravity="center"
         android:layout_marginRight="20dp"
         android:layout_marginLeft="20dp"
@@ -12,7 +13,7 @@
         android:numStars="5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-    <TextView
+    <!--<TextView
         android:alpha=".17"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="30dp"
@@ -20,8 +21,9 @@
         android:layout_marginBottom="40dp"
         android:background="#000000"
         android:layout_width="match_parent"
-        android:layout_height="1dp" />
+        android:layout_height="1dp" />-->
     <LinearLayout
+        android:layout_marginTop="25dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="30dp"
         android:gravity="right"
@@ -38,6 +40,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            android:id="@+id/dialogo_valoracion_enviar"
             android:textStyle="bold"
             android:textSize="15sp"
             android:textColor="@color/wallet_holo_blue_light"
