Se cambia el marker verde de eventos, se corrigen los servicios, se corrigen las reseñas, ya se puede enviar una valoración y se agrega la conexión a los especialistas, sólo falta que funcione el filtro de los especialistas.

--- a/app/src/main/res/layout/activity_especialistas.xml
+++ b/app/src/main/res/layout/activity_especialistas.xml
@@ -41,6 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp">
             <Spinner
+                android:id="@+id/especialistas_spinner_municipio"
                 android:layout_marginRight="20dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginBottom="15dp"
@@ -53,6 +54,7 @@
             android:layout_width="match_parent"
             android:layout_height="55dp">
             <Spinner
+                android:id="@+id/especialistas_spinner_especialidad"
                 android:layout_marginRight="20dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginBottom="20dp"
