--- a/app/src/main/res/layout/sliding_buscar_actividades_espacio.xml
+++ b/app/src/main/res/layout/sliding_buscar_actividades_espacio.xml
@@ -340,6 +340,22 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </LinearLayout>-->
+            <TextView
+                android:layout_marginBottom="15dp"
+                android:layout_marginTop="15dp"
+                android:textSize="15sp"
+                android:alpha=".8"
+                android:textColor="#000000"
+                android:textStyle="bold"
+                android:text="Membresias"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <Spinner
+                android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
+                android:id="@+id/buscar_espacio_spinner_membresias"
+                android:layout_width="match_parent"
+                android:layout_height="42dp"></Spinner>
             <ImageView
                 android:layout_marginTop="40dp"
                 android:layout_marginBottom="50dp"
