--- a/app/src/main/res/layout/sliding_buscar_actividades_espacio.xml
+++ b/app/src/main/res/layout/sliding_buscar_actividades_espacio.xml
@@ -3,7 +3,6 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <RelativeLayout
-        android:elevation="5dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:layout_marginRight="8dp"
@@ -256,15 +255,15 @@
                         android:layout_marginTop="10dp"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
-                        <!--<TextView
+                        <TextView
+                            android:id="@+id/sliding_buscar_espacio_nombre_resenia"
                             android:layout_alignParentRight="true"
                             android:alpha=".8"
                             android:textColor="#000000"
                             android:textStyle="bold"
-                            android:textSize="15sp"
-                            android:text="Samuel L. Jackson"
+                            android:textSize="14sp"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />-->
+                            android:layout_height="wrap_content" />
                     </RelativeLayout>
 
                 </LinearLayout>
